added new custom svg donut chart with animation

--- a/index.html
+++ b/index.html
@@ -10,33 +10,41 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div class="card">
-            <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
-                <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
-                <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
+        <div class="container">
+            <div class="card">
+                <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
+                    <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
+                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
 
-                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#ce4b99" stroke-width="3" stroke-dasharray="40 60" stroke-dashoffset="25"></circle>
-                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#b1c94e" stroke-width="3" stroke-dasharray="20 80" stroke-dashoffset="85"></circle>
-                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#377bbc" stroke-width="3" stroke-dasharray="30 70" stroke-dashoffset="65"></circle>
-                <!-- unused 10% -->
-            </svg>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#ce4b99" stroke-width="3" stroke-dasharray="40 60" stroke-dashoffset="25"></circle>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#b1c94e" stroke-width="3" stroke-dasharray="20 80" stroke-dashoffset="85"></circle>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#377bbc" stroke-width="3" stroke-dasharray="30 70" stroke-dashoffset="65"></circle>                    
+                </svg>
+            </div>
 
-            </svg>
-        </div>
+            <div class="card">
+                <div class="pie"></div>
+            </div>
 
-        <div class="card">
-            <div class="pie"></div>
-        </div>
+            <div class="card">
+                <svg class="pie-svg" viewBox="0 0 32 32">
+                    <circle class="circle-svg" r="15.915494309" cx="16" cy="16" />
+                    <circle class="circle-svg2" r="15.915494309" cx="16" cy="16" />
+                </svg>
+            </div>
 
-        <div class="card">
-            <svg class="pie-svg" viewBox="0 0 32 32">
-                <circle class="circle-svg" r="15.915494309" cx="16" cy="16" />
-                <circle class="circle-svg2" r="15.915494309" cx="16" cy="16" />
-            </svg>
-        </div>
+            <div class="card">
+                <div class="conical"></div>
+            </div>
 
-        <div class="card">
-            <div class="conical"></div>
+            <div class="card new">
+                <svg class="pie-center" viewBox="0 0 32 32">
+                    <circle class="circle1" r="15.915494309" cx="16" cy="16" />
+                    <circle class="circle2" r="15.915494309" cx="16" cy="16" />
+                    <circle class="circle3" r="15.915494309" cx="16" cy="16" />
+                    <circle class="circle4" r="15.915494309" cx="16" cy="16" />
+                </svg>
+            </div>
         </div>
     </body>
 </html>
